--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon index.js",
     "production": "pm2 start index.js --name knowledge-backend"
   },
   "devDependencies": {
